--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: invoice-frontend
+        working-directory: ./invoice-frontend
       
     steps:
       - name: Checkout
