--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache-dependency-path: ./invoice-frontend/${{ steps.detect-package-manager.outputs.manager }}.lock
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
