--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -57,7 +57,9 @@ jobs:
         with:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: ./invoice-frontend/${{ steps.detect-package-manager.outputs.manager }}.lock
+          cache-dependency-path: |
+            ./invoice-frontend/package-lock.json
+            ./invoice-frontend/yarn.lock
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
