--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -80,8 +80,10 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Check installed dependencies
+        run: ls -la node_modules/.bin
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build && next export
+        run: ${{ steps.detect-package-manager.outputs.manager }} run next build && ${{ steps.detect-package-manager.outputs.manager }} run next export
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
