--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./invoice-frontend/out
 
   # Deployment job
   deploy:
