--- a/invoice-frontend/.vscode/settings.json
+++ b/invoice-frontend/.vscode/settings.json
@@ -9,6 +9,6 @@
     ],
     "editor.renderWhitespace": "boundary",
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
+      "source.fixAll.eslint": "explicit"
     }
   }
